style.css
a{
    color: #f4ece4;
    margin: 0;
    padding: 8px;
    text-decoration: none;
}

a:hover{
    color:#40514e;
    transition: .5s;
}

body{
    background-color:#f4ece4;
    font-family: 'Montserrat', sans-serif;
    margin: 0;
    position: relative;
    text-align: center;
}

em{
    color: #36a182;
    font-weight: bold;
}

h1{
    color: #40514e;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
    line-height: 2;
    margin: auto auto 50px auto;
}


h3{
    color: #40514e;
    font-size: 1.7rem;
    font-weight: normal;
}

h4{
    color: #40514e;
    display: inline;
}

hr{
    border-color:#97DECE;
    border-style:none;
    border-top-style: dotted;
    border-top: dotted;
    border-width: 7px;
    margin-bottom: 100px;
    width: 7%;
}

input{
    height: 2rem;
    width: 60%;
}

li{
    display: inline-block;
    line-height: 80px;
    margin: 0 5px;
}


nav{
    background-color: #36a182;
    box-shadow: 0 5px 60px rgba(0,0,0,0.08);
    height: 80px;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 16777271;      /* important!!! */
}

textarea{
    height: 7rem;
    width: 60%;
}


ul {
    float: right;
    list-style-type: none;
    margin: 0 20px 0 0;
    padding: 0;
}

#about{
    background-color: #36a182;
    line-height: 2;
    margin: 100px 0 130px 0;
    padding: 50px 0 ;
}

#contact{
    margin: auto;
    width: 70%;
}

#introduction{
    margin: 0px auto 50px auto;
    padding: 10rem 0 0;
    position: relative;
    width: 80%;
}

#projects{
    background-color: #f4f4f4;
    margin: 0 auto 150px;
    padding: 80px 0;
    width: 90%;
}

#skills{
    background-color: #f4f4f4;
    margin: 0 auto 150px;
    padding: 50px 0;
    width: 90%;
}

.bg{
    position: absolute;
    width: 100%;
}

.btn {
    -moz-border-radius: 0;
    -webkit-border-radius: 0;
    background-image: -moz-linear-gradient(top, #36a182, #36a182);
    background-image: -ms-linear-gradient(top, #36a182, #36a182);
    background-image: -o-linear-gradient(top, #36a182, #36a182);
    background-image: -webkit-linear-gradient(top, #36a182, #36a182);
    background-image: linear-gradient(to bottom, #36a182, #36a182);
    background: #36a182;
    border-radius: 0px;
    color: #ffffff;
    font-family: Arial;
    font-size: 20px;
    margin: 200px 0px;
    padding: 10px 40px 10px 40px;
    text-decoration: none;
}
  
  .btn:hover {
    background-image: -moz-linear-gradient(top, #2f9173, #2f9173);
    background-image: -ms-linear-gradient(top, #2f9173, #2f9173);
    background-image: -o-linear-gradient(top, #2f9173, #2f9173);
    background-image: -webkit-linear-gradient(top, #2f9173, #2f9173);
    background-image: linear-gradient(to bottom, #2f9173, #2f9173);
    background: #2f9173;
    color: #f4f4f4;
    text-decoration: none;
}

.btn.send-btn{
    margin:10px;
}

.btn.send-btn:hover{
    color:#ffffff;
    margin:10px;
    transition: .1s;
}

.bottom-container{
    background-color:#2f9173;
    line-height: 2;
    padding: 50px 0 20px;
}

.copy-right{
    color: #f4ece4;
}

.contact-feedback{
    background-color: #2f9173;
    height: 300px;
    margin: 0 0 30px 0 ;
    padding: 50px 0 0px;
}

.contact-container{
    background-color: #CBEDD5;
    padding: 50px 0 80px;
}

.discription-me{
    color: #f4ece4;
    margin: 50px auto;
    width: 50%;
}

.example{
    background-color:  #f4f4f4;
    height: 300px;
    margin: 10px 0;
}

.example-img{
    width: 30%;
}

.form-control{
    margin: 20px;
}

.feedback{
    color: #f4ece4;
    line-height: 2;
    margin: 50px 100px;
}

.logo{
    color:#f4ece4;
    font-size: 30px;
    font-weight: bold;
    line-height: 80px;
    padding: 0 100px;
}

.skill-discription{
    margin: 40px 0;
}

.me{
    width: 20%;
}

.name{
    font-family: 'Dancing Script', cursive;
}

.paperOverlay {
    background-image: url("/img/texture.png");
    background-repeat: repeat;
    bottom: 0;
    left: 0;
    mix-blend-mode: multiply;
    pointer-events: none;
    position: absolute;
    right: 0;
    top: 0;
}

.projects-items{
    padding: 3rem;
}

.projects-img{
    display: block;
    margin-right: 20px;
    margin: auto;
    width: 100%;
}

.skill-row{
    line-height: 2;
    margin: 100px auto 10px auto;
    text-align: left;
    width: 60%;
}

.skills-img{
    display: block;
    margin-right: 20px;
    margin: auto;
    width: 60%;
}

.web-developer{
    font-size: 2.5rem;
}

